# agentic-rag-engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  JUSTIFICATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
.streamlit/: config.toml
configs/: chunking.yaml  embeddings.yaml  evaluation.yaml  retrieval.yaml
dashboard/: app.py  css.py
dashboard/components/: latency_tracer.py  metric_cards.py
dashboard/pages/: 1_Query_Explorer.py  2_Retrieval_Metrics.py  3_Chunking_Comparison.py  4_Hallucination_Report.py
data/evaluation/: benchmark_report.json  test_dataset.json
scripts/: verify_phase3.py  verify_phase4.py
services/app/: Dockerfile
src/: config.py  pipeline.py
src/api/: main.py  models.py
src/api/routes/: eval.py  ingest.py  query.py
src/evaluation/: __init__.py  benchmark_runner.py  ragas_eval.py  retrieval_metrics.py  test_dataset_generator.py
src/ingestion/: __init__.py  chunker.py  doc_type_detector.py  metadata.py  parser.py
src/llm/: __init__.py  citation_engine.py  groq_client.py  hallucination_detector.py  prompt_templates.py
src/reranking/: __init__.py  ab_comparator.py  cross_encoder.py  diversity_reranker.py
src/retrieval/: __init__.py  bm25_index.py  cache.py  embeddings.py  hybrid_retriever.py  query_router.py  vector_store.py
src/utils/: __init__.py  correlation_id.py  cost_estimator.py  timer.py  tokenizer.py
tests/: conftest.py  test_evaluation.py  test_ingestion.py  test_pipeline.py  test_reranking.py  test_retrieval.py
