[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag-engine"
version = "0.1.0"
description = "Production-grade RAG pipeline: hybrid retrieval, cross-encoder reranking, agentic query routing, hallucination detection"
requires-python = ">=3.11"

dependencies = [
    # PDF Processing
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24.0",

    # Chunking + NLP
    "chonkie[semantic]>=0.4.0",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "tiktoken>=0.7.0",

    # Embeddings + ML
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",

    # Vector DB
    "qdrant-client==1.9.2",

    # Sparse Retrieval
    "rank-bm25>=0.2.2",

    # Cache
    "redis>=5.0.0",
    "joblib>=1.4.0",

    # LLM
    "groq>=0.9.0",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.20.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",

    # Dashboard
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",

    # Utilities
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
